src/objects/Survey__c.object
<CustomObject>
    <fields>
        <fullName>Account_Category__c</fullName>
        <formula>TEXT(Contact__r.Account.Account_Category__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_ID__c</fullName>
        <formula>CASESAFEID(Contact__r.AccountId)</formula>
        <label>Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <description>Account Owner&apos;s ID</description>
        <formula>Contact__r.Account.Owner.Id</formula>
        <inlineHelpText>Account Owner&apos;s ID</inlineHelpText>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <description>Returns the Account Name of the Contact associated with the Health Check.</description>
        <formula>Contact__r.Account.Name</formula>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Answers_1__c</fullName>
        <inlineHelpText>1. How satisfied are you with our technology?</inlineHelpText>
        <label>1.Satisfaction with our technology?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Delighted</fullName>
                </value>
                <value>
                    <fullName>Very satisfied</fullName>
                </value>
                <value>
                    <fullName>Satisfied</fullName>
                </value>
                <value>
                    <fullName>Partially satisfied</fullName>
                </value>
                <value>
                    <fullName>Unhappy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Answers_2__c</fullName>
        <inlineHelpText>2. How satisfied are you with our technical support?</inlineHelpText>
        <label>2.Satisfaction with Technical Support?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Delighted</fullName>
                </value>
                <value>
                    <fullName>Very satisfied</fullName>
                </value>
                <value>
                    <fullName>Satisfied</fullName>
                </value>
                <value>
                    <fullName>Partially satisfied</fullName>
                </value>
                <value>
                    <fullName>Unhappy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Answers_3__c</fullName>
        <inlineHelpText>3. How satisfied are you with our vendor practices?</inlineHelpText>
        <label>3. Satisfaction with vendor practices?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Delighted</fullName>
                </value>
                <value>
                    <fullName>Very satisfied</fullName>
                </value>
                <value>
                    <fullName>Satisfied</fullName>
                </value>
                <value>
                    <fullName>Partially satisfied</fullName>
                </value>
                <value>
                    <fullName>Unhappy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments1__c</fullName>
        <inlineHelpText>Optional: How can we improve our technology?</inlineHelpText>
        <label>Opt: How can we improve technology?</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments2__c</fullName>
        <inlineHelpText>Optional: How can we improve our technical support?</inlineHelpText>
        <label>Opt: How can we improve support?</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments3__c</fullName>
        <inlineHelpText>Optional: How can we improve our vendor practices?</inlineHelpText>
        <label>Opt: How to improve vendor practices?</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Health Checks</relationshipLabel>
        <relationshipName>Surveys</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Created_Period_Reference__c</fullName>
        <formula>IF(
  OR(
    AND(
      YEAR(DATEVALUE(CreatedDate)) = 2016,
      DATEVALUE(CreatedDate) &lt;= DATE(2016,5,7)),
    AND(
      YEAR(DATEVALUE(CreatedDate)) = 2017,
      DATEVALUE(CreatedDate) &lt;= DATE(2017,5,6))),
TEXT(0),
NULL)</formula>
        <label>Created Period Reference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Period__c</fullName>
        <formula>IF(
DATEVALUE(CreatedDate) = DATE(2017,12,31),
&quot;FY17 SP-26&quot;,
IF(
YEAR(DATEVALUE(CreatedDate)) = 2016,
&quot;FY16 SP-&quot; &amp; Created_Period_Reference__c 
&amp;
TEXT(
    CEILING( 
          (MOD(
               FLOOR(
                     (DATEVALUE(CreatedDate) - DATE(2016,01,03)) / 7
                    ),
               52
          ) + 1) / 2
         )
),
IF(
YEAR(DATEVALUE(CreatedDate)) = 2017,
&quot;FY17 SP-&quot; &amp; Created_Period_Reference__c
&amp;
TEXT(
    CEILING( 
          (MOD(
               FLOOR(
                     (DATEVALUE(CreatedDate) - DATE(2017,01,01)) / 7
                    ),
               52
          ) + 1) / 2
         )

),NULL)))</formula>
        <label>Created Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Status__c</fullName>
        <formula>TEXT(Contact__r.Account.Customer_Status1__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Edit__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Id &amp; &quot;/e?retURL=%2F&quot; &amp; Id, 
IMAGE(&quot;/servlet/servlet.FileDownload?file=015E0000007XU3h&quot;, &quot;Pencil&quot;), 
&quot;_self&quot;)</formula>
        <label>Edit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Health_Check__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Health Check</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_latest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Most Recent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L365__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Flag that denotes that the survey has less than 365 days since creation.</description>
        <label>L365</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manager_Lvl_1__c</fullName>
        <formula>Owner_2__r.Manager.Full_Name__c</formula>
        <label>Manager (Lvl 1)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <formula>CreatedBy.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <formula>(IF(
   ISPICKVAL(Answers_1__c, &quot;Delighted&quot;), 1,
   IF(
      ISPICKVAL(Answers_1__c, &quot;Very Satisfied&quot;), 0.75,
      IF(
         ISPICKVAL(Answers_1__c, &quot;Satisfied&quot;), 0.50,
         IF(
            ISPICKVAL(Answers_1__c, &quot;Partially Satisfied&quot;), 0.25, 0))))
+
IF(
   ISPICKVAL(Answers_2__c, &quot;Delighted&quot;), 1,
   IF(
      ISPICKVAL(Answers_2__c, &quot;Very Satisfied&quot;), 0.75,
      IF(
         ISPICKVAL(Answers_2__c, &quot;Satisfied&quot;), 0.50,
         IF(
            ISPICKVAL(Answers_2__c, &quot;Partially Satisfied&quot;), 0.25, 0))))
+
IF(
   ISPICKVAL(Answers_3__c, &quot;Delighted&quot;), 1,
   IF(
      ISPICKVAL(Answers_3__c, &quot;Very Satisfied&quot;), 0.75,
      IF(
         ISPICKVAL(Answers_3__c, &quot;Satisfied&quot;), 0.50,
         IF(
            ISPICKVAL(Answers_3__c, &quot;Partially Satisfied&quot;), 0.25, 0)))))
            
/

IF(
   AND(
       ISBLANK(TEXT(Answers_1__c)),
       ISBLANK(TEXT(Answers_2__c)),
       ISBLANK(TEXT(Answers_3__c))
      ),
Null,
IF(
   ISBLANK(TEXT(Answers_1__c)),
   0,
   1
  )
+
IF(
   ISBLANK(TEXT(Answers_2__c)),
   0,
   1
  )
+
IF(
   ISBLANK(TEXT(Answers_3__c)),
   0,
   1
  ))</formula>
        <label>Satisfaction</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sentiment__c</fullName>
        <formula>( 
IF(ISPICKVAL(Answers_4__c, &quot;Yes&quot;),1,0) 
+ 
IF(ISPICKVAL(Answers_5__c, &quot;Yes&quot;),1,0)) 

/ 

IF( 
AND( 
ISBLANK(TEXT(Answers_4__c)), 
ISBLANK(TEXT(Answers_5__c))), 
Null, 
IF( 
ISBLANK(TEXT(Answers_4__c)), 
0, 
1 
) 
+ 
IF( 
ISBLANK(TEXT(Answers_5__c)), 
0, 
1 
) 
)</formula>
        <label>Sentiment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Survey_Created_Date__c</fullName>
        <description>Survey Created Date for reporting purposes.  Wanted to rename Created Date to Survey: Created Date</description>
        <formula>DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Survey: Created Date</label>
        <type>Date</type>
    </fields>
    <label>Survey</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>X1_Health_Check_s_Pending_Assignment</fullName>
        <columns>Owner_2__c</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>NAME</columns>
        <columns>Answers_1__c</columns>
        <columns>Answers_2__c</columns>
        <columns>Answers_3__c</columns>
        <columns>Answers_4__c</columns>
        <columns>Answers_5__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Owner_2__c</field>
            <operation>equals</operation>
        </filters>
        <label>1 - Health Checks Pending Assignment</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Health Check</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Surveys</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>